# header-warden

./: CMakeLists.txt  README.md  example.cpp
.github/workflows/: release.yml
cmake/: External.cmake
src/: app.cpp  app.hpp  args.cpp  args.hpp  disk.cpp  disk.hpp  example.cpp  globals.hpp  log.cpp  log.hpp  main.cpp  net.cpp  net.hpp  strings.cpp  strings.hpp
src/core/: args.cpp  args.hpp  globals.hpp  io.cpp  io.hpp  log.cpp  log.hpp  print.hpp  string.cpp  string.hpp
src/io/: disk.cpp  disk.hpp  strings.cpp  strings.hpp
src/modules/: analyze.cpp  analyze.hpp
src/shared/: globals.hpp  log.cpp  log.hpp
src/utils/: log.cpp  log.hpp  strings.cpp  strings.hpp
tests/: examples.hpp  helpers.hpp  test_all.cpp
